[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.2.0"
axum = { version = "0.7.4", features = [] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
tracing = { version = "0.1.40", default-features = false }
http-api-problem = { version = "0.58.0", features = ["axum", "api-error"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
headers = "0.4.0"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["sync"] }
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls",
    "json",
] }