[package]
name = "user-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
axum = "0.7.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "64-column-tables",
    "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }

